# nibol-py-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/nibol/: __init__.py  client.py
src/nibol/apis/: booking.py  building.py  space.py  user.py
src/nibol/clients/: async_client.py  sync_client.py
src/nibol/models/: __init__.py  booking.py  building.py  common.py  space.py  user.py
